# TEAM

./: .gitignore  README.md  pyproject.toml  webui-start.sh
src/: main.py
src/app/: api.py
src/app/service/: i18n.py  references.py
src/base/: model.py
src/data/: __init__.py
src/models/: __init__.py  m2ugen.py  random_models.py  stable_diffusion.py
tests/: backend.py
