[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["刘冬煜 <51255903088@stu.ecnu.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
babel = "^2.14.0"
pendulum = "^3.0.0"
fastapi = "^0.109.2"
requests = "^2.31.0"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
